--- a/FrontEnd/simbiox-desafio/src/app/lista/lista.component.sass
+++ b/FrontEnd/simbiox-desafio/src/app/lista/lista.component.sass
@@ -1,10 +1,48 @@
+h1
+  color: #18ACC4 
+  margin: 50px auto
+  width: 80%
+  font-weight: 900
 table
-    width: 100%
-
+    width: 90%
+    margin: 0 auto
+    background-color: transparent
+    color: #555
+    height: auto
 .mat-form-field
     font-size: 14px
-    width: 100%
+    width: 20%
 
+.mat-form-field input
+  color:#555
+
+.form-container
+    display: flex
+    justify-content: space-between
+    margin: 20px auto
+    width: 80%
 td,
 th
     width: 25%
+    height: 100px
+    color: #555
+    border-bottom: solid 1px #555
+    padding: 10px 0
+    .logo
+      width: 100px
+      height: auto
+      border: solid 2px #007A8D
+      object-fit: contain
+      margin-top: 6px
+
+.paginator
+  width: 80%
+  margin: 0 auto
+  background-color: transparent
+
+.mat-select-arrow
+  color: #555
+.mat-form-field input::placeholder
+    color: #555
+
+
