--- a/FrontEnd/simbiox-desafio/src/styles.sass
+++ b/FrontEnd/simbiox-desafio/src/styles.sass
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,700&display=swap')
+
+*
+  font-family: 'Roboto', sans-serif
+  color: #555
+body
+  background-color: #eee
+
+  .mat-select-panel .mat-option
+      background-color: #fff
+
+  .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple)
+    color:#eee
+    background-color: #b4b4b4
+
+  .mat-option-text
+    color: #555
+  .mat-select-arrow
+    color: #555
+  .mat-form-field-infix
+    border-bottom: #ddd solid 2px
+
+.mat-elevation-z8
+  background-color: transparent
+  width: 80%
+  margin: 0 auto
+  box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 15px 44px 2px rgb(0 0 0 / 12%)
