--- a/FrontEnd/simbiox-desafio/src/app/lista/lista.component.html
+++ b/FrontEnd/simbiox-desafio/src/app/lista/lista.component.html
@@ -1,50 +1,72 @@
+<h1>{{title}}</h1>
+<div class="form-container">
+  <mat-form-field appearance="standard">
+      <mat-label>Cidade</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. São Paulo" #input >
+    </mat-form-field>
 
-<h1>{{dataSource}}</h1>
-<mat-form-field appearance="standard">
-    <mat-label>Nome</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Gangplank" #input>
-  </mat-form-field>
-  
+    <mat-form-field appearance="standard">
+      <mat-label>Curso</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Ciências da computação" #input >
+    </mat-form-field>
+
+    <mat-form-field appearance="standard">
+      <mat-label>Preço</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. 500" #input >
+    </mat-form-field>
+</div>
+
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
-  
+
       <!--Coluna  Nome do Curso  -->
       <ng-container matColumnDef="Curso">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome do Curso </th>
-        <td mat-cell *matCellDef="let row of DATA_ARRAY"> {{row.name}} </td>
-      </ng-container>
-  
-      <!-- Coluna Cidade  -->
-      <ng-container matColumnDef="Cidade">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-        <td mat-cell *matCellDef="let row"> {{row.progress}} </td>
-      </ng-container>
-  
-      <!-- Coluna Preço -->
-      <ng-container matColumnDef="Preço">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
-  
+
+      <!-- Coluna Cidade  -->
+      <ng-container matColumnDef="Cidade">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cidade </th>
+        <td mat-cell *matCellDef="let row"> {{row.city}} </td>
+      </ng-container>
+
+      <!-- Coluna Preço -->
+      <ng-container matColumnDef="Preço">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Preço </th>
+        <td mat-cell *matCellDef="let row"> {{row.full_price | currency: 'BRL'}} </td>
+      </ng-container>
+
       <!-- Column Logo  -->
       <ng-container matColumnDef="Logo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-        <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Logo </th>
+        <td mat-cell *matCellDef="let row">
+          <!-- {{row.logo_url}} -->
+          <img class="logo" [src]="[row.logo_url]" alt="">
+        </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="Visualizar">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-        <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Visualizar </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-icon aria-hidden="false" aria-label="Example home icon" [routerLink]="['detalhes/' + row.full_price]">visibility</mat-icon>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
     </table>
-  
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-  </div>    
+
+    <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator> -->
+    <mat-paginator class="paginator" [length]="length"
+                   [pageSize]="pageSize"
+                   [pageSizeOptions]="pageSizeOptions"
+                   (page)="pageEvent = $event"
+                   aria-label="Select page">
+</mat-paginator>
+  </div>
